--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@emailjs/browser": "^4.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "tmp": "^0.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
